--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Welcome to My Website</h1>
-    <p>My Name is NWABUISI SOLOMON OKECHUKWU <br/> is a simple paragraph of text. We're using HTML for structure and CSS for styling.</p>
+    <p>My Name is NWABUISI SOLOMON OKECHUKWU </p> <br/> 
+<p>        This is a simple paragraph of text for my website. I am using HTML for structure and CSS for styling.</p>
+    <marquee> I am MSc student in Nnamdi Azikiwe University </marquee>
 </body>
 </html>
