--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>Welcome to My Website</h1>
     <p>My Name is NWABUISI SOLOMON OKECHUKWU </p> <br/> 
 <p>        This is a simple paragraph of text for my website. I am using HTML for structure and CSS for styling.</p>
-    <marquee> I am MSc student in Nnamdi Azikiwe University        I am MSc student in Nnamdi Azikiwe University        I am MSc student in Nnamdi Azikiwe University </marquee>
+    <marquee> I am MSc student in the prestigious Nnamdi Azikiwe University, Located in Awka, Anambra State, Nigeria. </marquee>
 </body>
 </html>
